[ERR] TODO : get reqparam nicely

--- a/jcer-web/src/main/resources/templates/checker/index.html
+++ b/jcer-web/src/main/resources/templates/checker/index.html
@@ -9,7 +9,9 @@
 <body>
     working...
     <div id = 'root-checker'>
-        <form id = 'checkerForm'>
+        <form id = 'checkerForm' action="/chker/test" method="post">
+
+            <input type="submit" value="test" >
         </form>
 
         <button id = 'btnAdd'> add </button>
